--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/registrar-revision-juridica/registrar-revision-juridica.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/registrar-revision-juridica/registrar-revision-juridica.component.html
@@ -25,7 +25,7 @@
         <strong>
           Fecha de aprobación del supervisor:
         </strong>
-       
+        {{ novedad.fechaValidacion | date: 'dd/MM/yyyy' }}
       </p>
       <p>
         <strong>
