--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/tabla-novedades-aprobadas/tabla-novedades-aprobadas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/tabla-novedades-aprobadas/tabla-novedades-aprobadas.component.html
@@ -69,20 +69,31 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
       <td mat-cell *matCellDef="let element">
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-          [routerLink]="[ 'registrarRevisionJuridica', element.novedadContractualId ]">
+          [routerLink]="[ 'registrarRevisionJuridica', element.novedadContractualId ]"
+          *ngIf="element.estadoCodigo === '10'">
           Registrar revisión jurídica
         </a>
-        <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button">
+        <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
+          [routerLink]="[ 'registrarRevisionJuridica', element.novedadContractualId ]"
+          *ngIf="element.estadoCodigo === '11'">
+          Ver detalle/Editar
+        </a>
+        <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
+        (click)="EnviarAComite(element.novedadContractualId)"
+        *ngIf="element.estadoCodigo === '11' && element.registroCompletoTramiteNovedades === true" >
           Enviar a comité técnico
         </button>
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-        [routerLink]="[ 'verDetalle', element.novedadContractualId ]">
+        [routerLink]="[ 'verDetalle', element.novedadContractualId ]"
+        *ngIf="element.estadoCodigo !== '10' && element.estadoCodigo !== '11' ">
         Ver detalle
       </a>
-      <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button">
+      <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
+      *ngIf="element.estadoCodigo === '11' && element.registroCompletoTramiteNovedades === true">
         Devolver solicitud
       </button>
-      <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button">
+      <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
+      *ngIf="element.estadoCodigo === '11' && element.registroCompletoTramiteNovedades === true">
         Cancelar novedad
       </button>
       </td>
