--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/form-representante/form-representante.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/form-representante/form-representante.component.html
@@ -140,7 +140,7 @@
           </mat-card-content>
         </mat-card>
         <div class="text-center">
-          <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="representante.dirty">
+          <button mat-button color="warn" class="btn-guardar" type="submit" (click)="guardar()">
             <img src="assets/img/icon/guardar.svg" alt="Guardar" />
           </button>
         </div>
