--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/tabla-proyectos/tabla-proyectos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/tabla-proyectos/tabla-proyectos.component.html
@@ -72,8 +72,8 @@
       <td mat-cell *matCellDef="let element">
         <span
           class="info-text d-block m-0"
-          [class.sin-diligenciar]="!element.registroCompletoEntregaETC || element.registroCompletoEntregaETC == null"
-          [class.completo]="element.registroCompletoEntregaETC"
+          [class.sin-diligenciar]="!element.registroCompleto || element.registroCompleto == null"
+          [class.completo]="element.registroCompleto"
         ></span>
         <span
         *ngIf="element.registroCompleto"
@@ -94,7 +94,7 @@
         Gestión
       </th>
       <td mat-cell *matCellDef="let element">
-        <a
+        <a *ngIf="element.estadoEntregaEtc !='2' "
           mat-button
           mat-raised-button
           color="accent"
@@ -102,8 +102,29 @@
           [routerLink]="['registrarEntrega', element.informeFinalId]"
         >
         <span *ngIf="element.estadoEntregaEtc === '0' || element.estadoEntregaEtc === null ">Registrar entrega</span>
-        <span *ngIf="element.estadoEntregaEtc !== '0' && element.estadoEntregaEtc !== null">Ver detalle/Editar</span>
+        <span *ngIf="element.estadoEntregaEtc !== '0' && element.estadoEntregaEtc !== '2' && element.estadoEntregaEtc !== null">Ver detalle/Editar</span>
         </a>
+        <a *ngIf="element.estadoEntregaEtc === '2'"
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          type="button"
+          [routerLink]="['verDetalle', element.proyectoId]"
+        >
+          Ver detalle
+        </a>
+        <button
+        *ngIf="element.registroCompleto === true && element.estadoEntregaEtc !== '2'"
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          type="button"
+          (click)="enviarProyectoAEtc(element.informeFinalId)"
+        >
+        Proyecto entregado
+      </button>
       </td>
     </ng-container>
 
