--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/registrar-avance-actua-derivadas/registrar-avance-actua-derivadas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/registrar-avance-actua-derivadas/registrar-avance-actua-derivadas.component.html
@@ -15,7 +15,10 @@
     <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
         <mat-card class="shipping-card">
             <mat-card-content align="left">
-                <p><strong>Actuación en la que se requiere participación o insumo de la fiduciaria: </strong>{{controversia?.proximaActuacionCodigoString}}</p>
+                <p><strong>Actuación en la que se requiere participación o insumo de la fiduciaria: </strong>{{controversia?.actuacionAdelantadaString}}</p>
+                <div *ngIf="controversia?.actuacionAdelantadaOtro!=null">
+                    <p><strong>Cual: </strong>{{controversia?.actuacionAdelantadaOtro}}</p>
+                </div>
                 <p><strong>Fecha de la actuación adelantada: </strong>{{controversia?.fechaActuacion | date:
                     'dd/MM/yyyy'}}</p>
                 <div class="row">
