--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/home/home.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/home/home.component.html
@@ -12,7 +12,7 @@
       <img src="assets/img/icon/cerrar-gris.svg" alt="cerrar ayuda" />
     </button>
     Bienvenida/o, aquí podrá registrar el proceso de transferencia a las respectivas entidades territoriales
-    certificadas de los proyectos de infra- estructura que se ejecutaron por parte del FFIE y que tienen informe final
+    certificadas de los proyectos de infraestructura que se ejecutaron por parte del FFIE y que tienen informe final
     aprobado y verificado.
   </div>
 
