--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/tabla-proyectos/tabla-proyectos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/tabla-proyectos/tabla-proyectos.component.html
@@ -72,16 +72,16 @@
       <td mat-cell *matCellDef="let element">
         <span
           class="info-text d-block m-0"
-          [class.sin-diligenciar]="!element.registroCompleto || element.registroCompleto == null"
-          [class.completo]="element.registroCompleto"
+          [class.sin-diligenciar]="!element.registroCompletoEntregaEtc || element.registroCompletoEntregaEtc == null"
+          [class.completo]="element.registroCompletoEntregaEtc"
         ></span>
         <span
-        *ngIf="element.registroCompleto"
+        *ngIf="element.registroCompletoEntregaEtc"
           >
           Completo
       </span>
       <span
-      *ngIf="!element.registroCompleto || element.registroCompleto == null"
+      *ngIf="!element.registroCompletoEntregaEtc || element.registroCompletoEntregaEtc == null"
         >
         Incompleto
     </span>
@@ -115,7 +115,7 @@
           Ver detalle
         </a>
         <button
-        *ngIf="element.registroCompleto === true && element.estadoEntregaEtc !== '2' && element.estadoEntregaEtc"
+        *ngIf="element.registroCompletoEntregaEtc === true && element.estadoEntregaEtc !== '2' && element.estadoEntregaEtc"
           mat-button
           mat-raised-button
           color="accent"
