--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/registrar-entrega/registrar-entrega.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/registrar-entrega/registrar-entrega.component.html
@@ -5,10 +5,11 @@
     </a>
   </div>
   <div class="text-center">
-    <h1 class="title-menu--h1">
+    <h1 class="title-menu--h1" *ngIf="proyectoEntregaEtc">
       <span *ngIf="proyectoEntregaEtc.informeFinal.estadoEntregaEtc === '0' || proyectoEntregaEtc.informeFinal.estadoEntregaEtc === null ">Registrar entrega</span>
       <span *ngIf="proyectoEntregaEtc.informeFinal.estadoEntregaEtc !== '0' && proyectoEntregaEtc.informeFinal.estadoEntregaEtc !== null">Ver detalle/Editar registro de entrega</span>
       {{ llaveMen }}</h1>
+    <h1 class="title-menu--h1"  *ngIf="!proyectoEntregaEtc"> Registrar entrega {{ llaveMen }}</h1>
     <p class="colorMainColor mt-05em">
       Número de contrato Obra:
       <b> {{ numeroContratoObra }} </b>
