--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/tabla-proyectos/tabla-proyectos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/tabla-proyectos/tabla-proyectos.component.html
@@ -110,7 +110,7 @@
           color="accent"
           class="btn-table"
           type="button"
-          [routerLink]="['verDetalle', element.proyectoId]"
+          [routerLink]="['verDetalle', element.informeFinalId]"
         >
           Ver detalle
         </a>
