--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-detalle-giro-gog/accordion-detalle-giro-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-detalle-giro-gog/accordion-detalle-giro-gog.component.html
@@ -36,7 +36,7 @@
                     Descuentos Dirección Técnica
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <app-desc-dir-tecnica-gog></app-desc-dir-tecnica-gog>
+            <app-desc-dir-tecnica-gog [solicitudPago]="solicitudPago"></app-desc-dir-tecnica-gog>
         </mat-expansion-panel>
     </mat-accordion>
     <mat-accordion>
