--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-info-general-gog/accordion-info-general-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-info-general-gog/accordion-info-general-gog.component.html
@@ -1,4 +1,4 @@
-<section *ngIf="solicitudPago !== undefined">
+<section *ngIf="solicitudPago !== undefined && solicitudPagoFase !== undefined">
     <mat-accordion>
         <mat-expansion-panel class="expansion-style sub-expansion">
             <mat-expansion-panel-header class="expansion-style--header">
@@ -10,11 +10,11 @@
                 <mat-card-content style="text-align: left;">
                     <p><strong>Código SIFI:</strong> 357233</p>
                     <p><strong>Coordinación responsable:</strong> Andina</p>
-                    <p><strong>Tipo de contrato:</strong> {{ getTipoSolicitudContrato( solicitudPago.contratoSon.contratacion.tipoSolicitudCodigo ) }} </p>
+                    <p><strong>Tipo de contrato:</strong> {{ getTipoSolicitudContrato( solicitudPago.tipoSolicitudCodigo ) }} </p>
                     <!--
                         solicitudPago.solicitudPagoRegistrarSolicitudPago[0].solicitudPagoFase[0].solicitudPagoFaseFactura[0].valorFacturado
                     -->
-                    <p><strong>Valor de la factura:</strong> ${{ 300000 | currency:' ':'symbol-narrow':'.0-0' }} </p>
+                    <p><strong>Valor de la factura:</strong> {{ valorTotalFactura | currency:'':'symbol-narrow':'.0-0' }} </p>
                 </mat-card-content>
             </mat-card>
             <app-tabla-datos-solicitud-gog [listProyectos]="solicitudPago.contratoSon.listProyectos[1]"></app-tabla-datos-solicitud-gog>
