--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/desc-dir-tecnica-gog/desc-dir-tecnica-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/desc-dir-tecnica-gog/desc-dir-tecnica-gog.component.html
@@ -1,71 +1,49 @@
-<div style="margin-top: 1em;">
-    <div class="d-flex align-items-center solbloq ml8 info-text en-alertaLibre mb-2em">
-        A continuación encontrará los tipos de pago asociados a la factura para que usted determine la distribución de los descuentos
-        identificados por la Dirección Técnica.
+<section *ngIf="fasePreConstruccionFormaPagoCodigo !== undefined">
+    <div style="margin-top: 1em;">
+        <div class="d-flex align-items-center solbloq ml8 info-text en-alertaLibre mb-2em">
+            A continuación encontrará los tipos de pago asociados a la factura para que usted determine la distribución de los descuentos
+            identificados por la Dirección Técnica.
+        </div>
     </div>
-</div>
-<div class="table-responsive">
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-        <ng-container matColumnDef="tipoDescuento">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo de descuento </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.tipoDescuento }} </td>
-        </ng-container>
-        <ng-container matColumnDef="valorDescuento">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor del descuento </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.valorDescuento }} </td>
-        </ng-container>
-        <ng-container matColumnDef="valorTotalDescuentos">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor total de descuentos </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.valorTotalDescuentos }} </td>
-        </ng-container>
-        <ng-container matColumnDef="valorNetoGiro">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor neto de giro </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.valorNetoGiro }} </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-    <!--<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>-->
-</div>
-<mat-accordion>
-    <mat-expansion-panel class="expansion-style sub-expansion-black">
-        <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title sin-diligenciar">
-                Descuento 1
-            </mat-panel-title>
-        </mat-expansion-panel-header>
-        <app-form-descuentos-gog></app-form-descuentos-gog>
-    </mat-expansion-panel> 
-</mat-accordion>
-<mat-accordion>
-    <mat-expansion-panel class="expansion-style sub-expansion-black">
-        <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title sin-diligenciar">
-                Descuento 2
-            </mat-panel-title>
-        </mat-expansion-panel-header>
-        <app-form-descuentos-gog></app-form-descuentos-gog>
-    </mat-expansion-panel>
-</mat-accordion>
-<!--
-<mat-accordion>
-    <mat-expansion-panel class="expansion-style sub-expansion-black">
-        <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title sin-diligenciar">
-                Costo variable
-            </mat-panel-title>
-        </mat-expansion-panel-header>
-        <app-form-costo-variable-gog></app-form-costo-variable-gog>
-    </mat-expansion-panel> 
-</mat-accordion>
-<mat-accordion>
-    <mat-expansion-panel class="expansion-style sub-expansion-black">
-        <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title sin-diligenciar">
-                Tipo de pago 3
-            </mat-panel-title>
-        </mat-expansion-panel-header>
-        <app-form-tipopago3-gog></app-form-tipopago3-gog>
-    </mat-expansion-panel>
-</mat-accordion>
--->
+    
+    <section class="table-responsive tabla-gris mt-1em">
+        <table mat-table [dataSource]="dataSource" matSort>
+            <ng-container matColumnDef="tipoDescuento">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Tipo de descuento </th>
+              <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
+                <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let descuento of element.listaDescuentos">
+                  {{ getTipoDescuento( descuento.tipoDescuentoCodigo ) }}
+                </div>
+              </td>
+            </ng-container>
+      
+            <ng-container matColumnDef="valorDescuento">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color"> Valor del descuento </th>
+              <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
+                <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let descuento of element.listaDescuentos">
+                  {{ descuento.valorDescuento | currency: '': 'symbol-narrow':'.0-0' }}
+                </div>
+              </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="valorTotalDescuentos">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor total de descuentos </th>
+                <td mat-cell *matCellDef="let element" align="center"> {{ element.valorTotalDescuentos | currency:'':'symbol-narrow':'.0-0' }} </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="valorNetoGiro">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor neto de giro </th>
+                <td mat-cell *matCellDef="let element" align="center"> {{ element.valorNetoGiro | currency:'':'symbol-narrow':'.0-0' }} </td>
+            </ng-container>
+        
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </section>
+
+    <app-form-descuentos-gog    [solicitudPagoFaseCriterio]="solicitudPagoFaseCriterio"
+                                [listaCriterios]="listaCriterios"
+                                [solicitudPagoFaseFacturaDescuento]="this.solicitudPagoFaseFactura.solicitudPagoFaseFacturaDescuento"
+                                [valorNetoGiro]="listData.valorNetoGiro">
+    </app-form-descuentos-gog>
+</section>
