--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-generar-orden-giro/form-generar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-generar-orden-giro/form-generar-orden-giro.component.html
@@ -12,8 +12,8 @@
     </p>
     <mat-card class="shipping-card var-main-gris">
         <mat-card-content align="left">
-            <p><strong>Fecha de solicitud de pago:</strong> {{ solicitudPago.solicitudPagoRegistrarSolicitudPago[0].fechaSolicitud | date: 'dd/MM/yyyy' }} </p>
-            <p><strong>Fecha de validación financiera:</strong> {{ solicitudPago.fechaAprobacionFinanciera | date: 'dd/MM/yyyy' }} </p>
+            <p><strong>Fecha de solicitud de pago:</strong> {{ solicitudPago.fechaCreacion | date: 'dd/MM/yyyy' }} </p>
+            <p><strong>Fecha de validación financiera:</strong> {{ solicitudPago.fechaRegistroCompletoValidacionFinanciera | date: 'dd/MM/yyyy' }} </p>
             <p><strong>Número de solicitud:</strong> {{ solicitudPago.numeroSolicitud }} </p>
             <p><strong>Modalidad de contrato:</strong> {{ getModalidadContrato( contrato.modalidadCodigo ) }} </p>
         </mat-card-content>
