--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/generar-orden-giro/generar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/generar-orden-giro/generar-orden-giro.component.html
@@ -36,7 +36,7 @@
             </ng-container>
             <ng-container matColumnDef="estadoGeneracion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la generación </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoOrdenGiro }} </td>
+                <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enviadaParaOrdenGiro ? element.estadoNombre2 : element.estadoNombre }} </td>
             </ng-container>
             <ng-container matColumnDef="estadoRegistro">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del registro </th>
