--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-proyecto/tabla-informe-final-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-proyecto/tabla-informe-final-proyecto.component.html
@@ -3,12 +3,7 @@
     <mat-label>Buscador / Filtro</mat-label>
     <input matInput #filtro (keyup)="applyFilter($event)" />
   </mat-form-field>
-  <button
-    mat-button
-    color="primary"
-    class="busqueda--img"
-    (click)="filtro.focus()"
-  >
+  <button mat-button color="primary" class="busqueda--img" (click)="filtro.focus()">
     <img src="assets/img/icon/lupa.svg" alt="Buscar" />
   </button>
 </div>
@@ -21,7 +16,7 @@
         Fecha de terminación Obra del proyecto
       </th>
       <td mat-cell *matCellDef="let element">
-        <b>{{ element.fechaTerminacionObra | date: "dd/MM/yyyy" }}</b>
+        <b>{{ element.fechaTerminacionObra }}</b>
       </td>
     </ng-container>
     <!-- fechaTerminacionInterventoria Column -->
@@ -30,13 +25,15 @@
         Fecha de terminación Interventoría del proyecto
       </th>
       <td mat-cell *matCellDef="let element">
-        <b>{{ element.fechaTerminacionInterventoria | date: "dd/MM/yyyy" }}</b>
+        <b>{{ element.fechaTerminacionInterventoria }}</b>
       </td>
     </ng-container>
 
     <!-- llaveMen Column -->
     <ng-container matColumnDef="llaveMen">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Llave MEN</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Llave MEN
+      </th>
       <td mat-cell *matCellDef="let element">{{ element.llaveMen }}</td>
     </ng-container>
 
@@ -60,7 +57,9 @@
 
     <!-- sedeEducativa Column -->
     <ng-container matColumnDef="sedeEducativa">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Sede</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Sede
+      </th>
       <td mat-cell *matCellDef="let element">{{ element.sedeEducativa }}</td>
     </ng-container>
 
@@ -82,27 +81,35 @@
       <td mat-cell *matCellDef="let element">
         <span
           class="info-text d-block m-0"
-          [class.sin-diligenciar]="element.registroCompleto === false"
-          [class.completo]="element.registroCompleto === true"
+          [class.sin-diligenciar]="element.registroCompleto === 'Incompleto'"
+          [class.completo]="element.registroCompleto === 'Completo'"
         ></span>
-        {{ element.registroCompleto ? "Completo" : "Incompleto" }}
+        {{ element.registroCompleto }}
       </td>
     </ng-container>
 
     <!-- proyectoId Column -->
     <ng-container matColumnDef="proyectoId">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Gestión
+      </th>
       <td mat-cell *matCellDef="let element">
         <a
-        *ngIf="element.estadoInformeCod === '1' || element.estadoInformeCod === '2' || element.estadoInformeCod === '0'"
+          *ngIf="
+            element.estadoInformeCod === '1' || element.estadoInformeCod === '2' || element.estadoInformeCod === '0'
+          "
           mat-button
           mat-raised-button
           color="accent"
           class="btn-table"
           [routerLink]="['registrar', element.proyectoId]"
         >
-          <span *ngIf="!element.registroCompleto && element.estadoInformeCod === '0'">Registrar informe final {{element.EstadoInformeCod}}</span>
-          <span *ngIf="element.estadoInformeCod === '1' || element.estadoInformeCod === '2'">Ver detalle / Editar</span>
+          <span *ngIf="element.registroCompleto === 'Incompleto' && element.estadoInformeCod === '0'">
+            Registrar informe final {{ element.EstadoInformeCod }}
+          </span>
+          <span *ngIf="element.estadoInformeCod === '1' || element.estadoInformeCod === '2'">
+            Ver detalle / Editar
+          </span>
         </a>
         <!-- <a
           *ngIf="
@@ -120,7 +127,10 @@
         </a> -->
         <a
           *ngIf="
-            element.estadoInformeCod === '3' || element.estadoInformeCod === '7' ||  element.estadoInformeCod === '5' ||  element.estadoInformeCod === '6'
+            element.estadoInformeCod === '3' ||
+            element.estadoInformeCod === '7' ||
+            element.estadoInformeCod === '5' ||
+            element.estadoInformeCod === '6'
           "
           mat-button
           mat-raised-button
@@ -132,7 +142,7 @@
           Ver detalle
         </a>
         <button
-        *ngIf="element.estadoInformeCod === '2' || element.estadoInformeCod === '8'"
+          *ngIf="element.estadoInformeCod === '2' || element.estadoInformeCod === '8'"
           mat-button
           mat-raised-button
           color="accent"
@@ -140,19 +150,18 @@
           type="button"
           (click)="enviarRegistroFinal(element.proyectoId)"
         >
-        Enviar informe a validación
-      </button>
-      <a
-      *ngIf="element.estadoInformeCod === '4' || element.estadoInformeCod === '8'"
-        mat-button
-        mat-raised-button
-        color="accent"
-        class="btn-table"
-        [routerLink]="['registrar', element.proyectoId]"
-      >
-        <span>Ver detalle / Editar
-        </span>
-      </a>
+          Enviar informe a validación
+        </button>
+        <a
+          *ngIf="element.estadoInformeCod === '4' || element.estadoInformeCod === '8'"
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          [routerLink]="['registrar', element.proyectoId]"
+        >
+          <span>Ver detalle / Editar </span>
+        </a>
       </td>
     </ng-container>
 
