--- a/asivamosffie.web/asivamosffie/src/app/shared/components/sub-menu/sub-menu.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/shared/components/sub-menu/sub-menu.component.scss
@@ -16,6 +16,9 @@
   flex-direction: column;
   justify-content: center;
 
+  position: sticky;
+  top: 0;
+
   &--button:not(:last-child) {
     margin-bottom: 1em;
   }
