--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/form-recorrido-obra/form-recorrido-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-transferencia-etc/components/form-recorrido-obra/form-recorrido-obra.component.html
@@ -206,4 +206,4 @@
     </button>
   </div>
 </form>
-<app-form-representante [numRepresentantesRecorrido] = "addressForm.get('numRepresentantesRecorrido').value" (numRepresentantesRecorridoChange)="changeValueRepresentantes($event)" [proyectoEntregaEtcId]= "addressForm.get('proyectoEntregaEtcid').value" [representanteEtcrecorrido] = "representanteEtcrecorrido" (callOnSubmitParent)="onSubmit()"></app-form-representante>
+<app-form-representante [numRepresentantesRecorrido] = "addressForm.get('numRepresentantesRecorrido').value" (numRepresentantesRecorridoChange)="changeValueRepresentantes($event)" [proyectoEntregaEtcId]= "addressForm.get('proyectoEntregaEtcid').value" [representanteEtcrecorrido] = "representanteEtcrecorrido" (callOnSubmitParent)="onSubmit()" (callOnInitParent)="ngOnInit()"></app-form-representante>
