--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-historial-observaciones/tabla-historial-observaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-historial-observaciones/tabla-historial-observaciones.component.html
@@ -18,7 +18,7 @@
             Responsable
           </th>
           <td mat-cell *matCellDef="let element">
-            {{ element.responsable }}
+            {{ element.nombreResponsable }}
           </td>
         </ng-container>
 
