--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-info-general-gog/accordion-info-general-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-info-general-gog/accordion-info-general-gog.component.html
@@ -31,7 +31,7 @@
                 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
                     <ng-container matColumnDef="drp">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> DRP </th>
-                        <td mat-cell *matCellDef="let element; index as i" align="center"> <b>{{ i + 1 }}</b> </td>
+                        <td mat-cell *matCellDef="let element; index as i" align="center"> <b> {{ i + 1 }} </b> </td>
                     </ng-container>
                     <ng-container matColumnDef="numDrp">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Número DRP </th>
@@ -39,16 +39,15 @@
                     </ng-container>
                     <ng-container matColumnDef="valor">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor </th>
-                        <td mat-cell *matCellDef="let element" align="center"> {{ element.valorSolicitud }} </td>
+                        <td mat-cell *matCellDef="let element" align="center"> {{ element.valorSolicitudDdp | currency:'':'symbol-narrow':'.0-0' }} </td>
                     </ng-container>
                     <ng-container matColumnDef="saldo">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo </th>
-                        <td mat-cell *matCellDef="let element" align="center"> {{ element.valorSolicitud }} </td>
+                        <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoPresupuestal | currency:'':'symbol-narrow':'.0-0' }} </td>
                     </ng-container>
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                 </table>
-                <!--<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>-->
             </div>
             <app-tabla-datos-ddp-gog></app-tabla-datos-ddp-gog>
         </mat-expansion-panel>
