--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/dialog-rechazar-solicitud-interventor/dialog-rechazar-solicitud-interventor.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/dialog-rechazar-solicitud-interventor/dialog-rechazar-solicitud-interventor.component.html
@@ -11,13 +11,13 @@
     <span>
       Numero de solicitud:
       <strong>
-        NOV-001
+        {{ data.numeroSolicitud }}
       </strong>
     </span>
     <span>
       Tipo de novedad:
       <strong>
-        Modificación de Condiciones Contractuales
+        {{ data.tipoNovedad }}
       </strong>
     </span>
   </section>
