--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
@@ -222,6 +222,29 @@
     </mat-card>
   </div>
 
+  <!-- cuando fue rechazado por interventor -->
+  <mat-card class="shipping-card var-main-gris" *ngIf="novedad.estadoCodigo === '9'">
+    <mat-card-header class="header-card header-card--margin">
+      <mat-card-title class="header-card--text">
+        Causa del rechazo
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p>
+        <strong>
+          {{ novedad['fechaModificacion'] | date: 'dd/MM/yyyy' }}
+        </strong>
+      </p>
+      <div>
+          <section 
+            [innerHTML]="novedad.causaRechazoInterventor"
+            style="margin-left: 2em"
+            
+    ></section>
+      </div>
+    </mat-card-content>
+  </mat-card>
+
   <div *ngIf="false">
     <table class="mat-table cdk-table mat-sort mat-table-style table-form table-form--2 table-gris">
       <thead>
