--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-interventoria/ver-detalle-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-interventoria/ver-detalle-interventoria.component.html
@@ -235,7 +235,7 @@
       </p>
       <div>
           <section 
-            [innerHTML]="novedad.causaRechazoInterventor"
+            [innerHTML]="novedad.causaRechazo"
             style="margin-left: 2em"
             
     ></section>
