--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-solicitud/ver-detalle-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-solicitud/ver-detalle-solicitud.component.html
@@ -231,7 +231,7 @@
       </p>
       <div>
           <section 
-            [innerHTML]="novedad.causaRechazoInterventor"
+            [innerHTML]="novedad.causaRechazo"
             style="margin-left: 2em"
             
     ></section>
