--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
@@ -237,7 +237,7 @@
       </p>
       <div>
           <section 
-            [innerHTML]="novedad.causaRechazoInterventor"
+            [innerHTML]="novedad.causaRechazo"
             style="margin-left: 2em"
             
     ></section>
